# uv-docker-example

./: Dockerfile  pyproject.toml
