[project]
name = "uv-docker-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "fastapi[standard]>=0.112.2",
]

[tool.uv.sources]
httpx = { git = "https://github.com/encode/httpx" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
